--- a/TealiumTVOSLifecycle.framework.dSYM/TealiumTVOSLifecycle.framework.dSYM/Contents/Info.plist
+++ b/TealiumTVOSLifecycle.framework.dSYM/TealiumTVOSLifecycle.framework.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.com.tealium.TealiumTVOS</string>
+		<string>com.apple.xcode.dsym.com.tealium.TealiumTVOSLifecycle</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
@@ -13,7 +13,7 @@
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleShortVersionString</key>
-		<string>5.4.10</string>
+		<string>1.0</string>
 		<key>CFBundleVersion</key>
 		<string>1</string>
 	</dict>
